# bearing

./: .gitignore  Apptainer.def  LICENSE  QUICKSTART.md  README.md  assert_qcat_nonempty.py  assert_score_provenance.py  baseline_comparison.py  batch_bearing_hic_plots.py  batch_pygenometracks.py  bearing_calibration.py  bearing_decomposition_report.py  bearing_diff_concordance.py  bearing_hic_combined_plot.py  bearing_hic_kl_track_plot.py  bearing_hic_plot.py  bearing_hic_plot_pval_overlay.py  bearing_hic_plot_triangle.py  bearing_kl_track_plot.py  bearing_pvalue.py  bearing_region_decomposition.py  bearing_specificity_profile.py  bearing_tad_compare.py  bearing_tad_decomposition.py  benchmark_grid_vs_standard.py  bes_differential_loops.py  bes_hic_correlation.py  bes_loop_anchor_enrichment.py  bigwig_to_qcat.py  bin_hic_superbins.py  build_adaptive_segmentation.py  build_capture_cools.sh  build_cohort_quantile_reference.py  build_superbin_grid.py  cbe_across_runs.py  cbe_point_query.py  check_perm_set.py  cleanup_reorg.sh  compare_adaptive_vs_default.py  compare_default_vs_qnorm.py  (+64 more)
.devcontainer/: devcontainer.json
annotations/: AgRgenes_mm10_s.bed  cbe_mm10.bed  igh_regions_v4.bed  targets.tsv  tcrb_extension_features.bed
bearing/: __init__.py  diagnostics.py  hic_io.py  plot_layout.py  plot_legend.py  plot_loaders.py  plot_tracks.py  runner.py  sheet.py  track_primitives.py  tsv.py  utils.py  validate.py  workflow
benchmark/: README.md  evaluate_bearing_recovery.py  plot_bearing_sweep.py  run_bearing_recovery_sweep.sh  simulate_bearing_tracks.py  (+1 more)
dev/: README.md  (+11 more)
(+112 files in other folders)
